Add update checker

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -39,4 +39,13 @@
     <string name="acknowledged_text">我已知晓</string>
     <string name="logout_confirmation">确定要退出登录吗？</string>
     <string name="logout">退出登录</string>
+    <string name="check_update">检查更新</string>
+    <string name="version_text">版本</string>
+    <string name="checking_update">正在检查更新……</string>
+    <string name="update_found">发现新版本 %1$s</string>
+    <string name="ok">好的</string>
+    <string name="update_not_found">已是最新版本</string>
+    <string name="update">更新</string>
+    <string name="error_text">错误</string>
+    <string name="checking_update_fail">检查更新失败，请检查网络连接</string>
 </resources>
